--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "draft-js-import-element": "^0.1.7",
-    "synthetic-dom": "^0.1.1"
+    "remark": "^4.1.2",
+    "synthetic-dom": "^0.1.1",
+    "vfile": "^1.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.7.2",
