--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "test-src": "mocha src/__tests__/*.js src/**/__tests__/*.js"
   },
   "dependencies": {
-    "draft-js-import-element": "^0.1.8",
-    "synthetic-dom": "^0.1.3"
+    "draft-js-import-element": "^0.1.10",
+    "synthetic-dom": "^0.1.4"
   },
   "peerDependencies": {
     "draft-js": "^0.5.0",
-    "immutable": "^3.8.0"
+    "immutable": "^3.8.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.7.5",
     "babel-core": "^6.7.6",
-    "babel-eslint": "^6.0.2",
+    "babel-eslint": "^6.0.3",
     "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
@@ -29,8 +30,8 @@
     "eslint": "^2.8.0",
     "eslint-plugin-babel": "^3.2.0",
     "eslint-plugin-flow-vars": "^0.3.0",
-    "eslint-plugin-react": "^4.3.0",
-    "expect": "^1.16.0",
+    "eslint-plugin-react": "^5.0.1",
+    "expect": "^1.18.0",
     "flow-bin": "^0.23.0",
     "mocha": "^2.4.5",
     "react": "^15.0.1",
