--- a/package.json
+++ b/package.json
@@ -12,27 +12,27 @@
     "test-src": "mocha src/__tests__/*.js src/**/__tests__/*.js"
   },
   "dependencies": {
-    "draft-js-import-element": "^0.1.12",
+    "draft-js-import-element": "^0.2.0",
     "synthetic-dom": "^0.1.4"
   },
   "peerDependencies": {
-    "draft-js": "^0.5.0",
-    "immutable": "^3.8.1"
+    "draft-js": ">=0.5.0",
+    "immutable": "3.x.x"
   },
   "devDependencies": {
-    "babel-cli": "^6.8.0",
-    "babel-core": "^6.8.0",
+    "babel-cli": "^6.9.0",
+    "babel-core": "^6.9.0",
     "babel-eslint": "^6.0.4",
-    "babel-plugin-transform-class-properties": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-plugin-transform-class-properties": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
-    "eslint": "^2.9.0",
+    "eslint": "^2.10.2",
     "eslint-plugin-babel": "^3.2.0",
     "eslint-plugin-flow-vars": "^0.4.0",
-    "eslint-plugin-react": "^5.0.1",
-    "expect": "^1.19.0",
-    "flow-bin": "^0.24.2",
+    "eslint-plugin-react": "^5.1.1",
+    "expect": "^1.20.1",
+    "flow-bin": "^0.25.0",
     "mocha": "^2.4.5",
     "react": "^15.0.2",
     "react-dom": "^15.0.2"
