--- a/.flowconfig
+++ b/.flowconfig
@@ -1,7 +1,4 @@
 [ignore]
-.*node_modules/babel.*
-.*node_modules/fbjs.*
-.*node_modules/json5.*
 
 [include]
 
@@ -9,5 +6,6 @@
 
 [options]
 esproposal.class_static_fields=enable
+module.system=haste
 suppress_type=$FlowIssue
 suppress_comment=\\(.\\|\n\\)*\\$FlowIssue
